feat(outlineshader): use SEShader

--- a/Testing/Testing.csproj
+++ b/Testing/Testing.csproj
@@ -11,4 +11,10 @@
       <ProjectReference Include="..\SharpEngine.Shaders\SharpEngine.Shaders.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Update="Resource\Food.png">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
 </Project>
